nsutils/tests/base/errors/addrShort.trace
1
send 4 5 2 1 0
recv 2 5 0
send 4 5 1 0 3
send 1 255
